# InvestorFrame

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routes/: health.py  market.py  scenarios.py  sectors.py  watchlist.py
cli/: __init__.py  main.py
config/: behavior_rules.yaml  event_sector_map.yaml  event_types.yaml  frame_rules.yaml  principles.yaml  regime_rules.yaml  review_rules.yaml  scenarios.yaml  sector_config.yaml  sell_rules.yaml  watchlist.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/public/: _headers
dashboard/public/data/: sell_rules.json  wisdom.json
dashboard/src/: index.css  main.tsx
docs/: CLOUDFLARE_PAGES_SETUP.md  FIELD_SPEC.md  LEAN_ARCHITECTURE.md  REFACTOR_CUT_LIST.md  architecture.md  data-sources.md  risk-policy.md  roadmap.md  scenario-lab.md
docs/plans/: 2026-03-11-frontend-design.md
examples/: market_pulse.json  scenario_hot_cpi.json  sector_rankings.json  watchlist_insights.json
investorframe/: __init__.py
investorframe/app/: config.py  models.py  storage.py
investorframe/connectors/: __init__.py  base.py  fred.py  llm.py  market.py  news.py
investorframe/core/: __init__.py  config.py  db.py  models.py  types.py
investorframe/discipline/: behavior.py  review.py  rulebook.py  sell.py  thesis.py  wisdom.py
investorframe/events/: __init__.py  classifier.py  parser.py
investorframe/frame/: regime.py  summary.py
investorframe/outputs/: static_build.py  sync_public_data.py
investorframe/pipeline/: __init__.py  context.py  orchestrator.py
investorframe/regime/: __init__.py  detector.py  indicators.py
investorframe/reports/: __init__.py  generator.py
investorframe/risk/: __init__.py  disclaimers.py  gates.py
investorframe/scenarios/: __init__.py  simulator.py  templates.py
investorframe/sectors/: __init__.py  engine.py  mapper.py
investorframe/sentiment/: __init__.py  aggregator.py  analyzer.py
investorframe/watchlist/: __init__.py  engine.py  scorer.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_events/: test_classifier.py
tests/test_regime/: test_detector.py
tests/test_scenarios/: test_simulator.py
tests/test_sectors/: test_engine.py
tests/test_sentiment/: test_aggregator.py
tests/test_watchlist/: test_scorer.py
(+76 files in other folders)
