[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investorframe"
version = "0.2.0"
description = "A lightweight investment decision discipline toolkit."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "InvestorFrame"},
]
dependencies = [
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0",
]

[project.scripts]
investorframe-build = "investorframe.outputs.static_build:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
